Improve EnchantCmd structure, fix incorrect relocations